Fix GitHub Pages: Remove OAuth, use mock login for static hosting

--- a/website.html
+++ b/website.html
@@ -769,12 +769,14 @@
             </div>
             <div class="modal-body">
                 <div class="login-options">
+                    <!-- GitHub OAuth在GitHub Pages上不可用，暂时隐藏
                     <button class="login-btn github-btn" onclick="loginWithGitHub()">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/>
                         </svg>
                         使用 GitHub 登录
                     </button>
+                    -->
                     <button class="login-btn wechat-btn" onclick="loginWithWeChat()">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M8.691 2.188C3.891 2.188 0 5.476 0 9.53c0 2.212 1.162 4.203 2.985 5.55l-.666 3.097 3.540-1.77c.571.098 1.176.196 1.832.196.313 0 .619-.024.918-.066-.195-.668-.313-1.37-.313-2.103 0-4.142 3.405-7.497 7.606-7.497.177 0 .35.012.521.024C14.691 4.181 11.999 2.188 8.691 2.188zm-2.46 2.716c.329 0 .595.266.595.595a.594.594 0 01-.595.595.594.594 0 01-.595-.595c0-.329.266-.595.595-.595zm4.919 0c.329 0 .595.266.595.595a.594.594 0 01-.595.595.594.594 0 01-.595-.595c0-.329.266-.595.595-.595z"/>
@@ -782,11 +784,11 @@
                         </svg>
                         使用微信登录
                     </button>
-                    <button class="login-btn" style="background: #666; color: white;" onclick="mockLogin()">
+                    <button class="login-btn" style="background: #007acc; color: white;" onclick="mockLogin()">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 1H5C3.89 1 3 1.89 3 3V21C3 22.11 3.89 23 5 23H19C20.11 23 21 22.11 21 21V9M19 9H14V4H19V9Z"/>
                         </svg>
-                        模拟登录（测试用）
+                        开始写诗
                     </button>
                 </div>
             </div>
