Refactor project structure to integrate OurVerse backend with a native SwiftUI iOS client. Update README.md to reflect the new layout and deployment instructions. Enhance MongoDB user schema with email normalization and index management. Remove WeChat Mini Program assets and related configurations. Introduce new iOS app files including health status monitoring and API client implementation.

--- a/backend/public/website.html
+++ b/backend/public/website.html
@@ -944,7 +944,7 @@
                        id="captionInput" 
                        class="caption-input" 
                        maxlength="20" 
-                       placeholder="The powerful play goes on and you may contribute a verse...">
+                       placeholder="You may contribute a verse...">
             </div>
             <button class="upload-btn" onclick="uploadPhoto()" id="uploadBtn">记录</button>
         </div>
