Remove maximum file size limit from configuration and update related middleware and Nginx settings to allow unlimited uploads.

--- a/backend/public/website.html
+++ b/backend/public/website.html
@@ -2184,16 +2184,9 @@ function getDeviceId() {
                 return;
             }
 
-            const MAX_UPLOAD_SIZE_BYTES = 100 * 1024 * 1024;
-
             try {
                 const file = photoInput.files[0];
                 const caption = captionInput.value.trim();
-
-                if (file.size > MAX_UPLOAD_SIZE_BYTES) {
-                    alert('文件太大啦，请将照片压缩后再试（当前限制约100MB）。');
-                    return;
-                }
 
                 // 显示上传中状态
                 uploadBtn.textContent = '上传中...';
@@ -2236,7 +2229,7 @@ function getDeviceId() {
                     alert('照片上传成功！');
                 } else {
                     if (response.status === 413) {
-                        alert('文件太大啦，请将照片压缩后再试（当前限制约100MB）。');
+                        alert('服务器拒绝了本次上传大小，请稍后重试或联系管理员。');
                         return;
                     }
                     // 处理不同的错误情况
